--- a/gpay.html
+++ b/gpay.html
@@ -5,34 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout — ChatPoint</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background:#f8f8f8; 
-            margin:0; 
-            padding:0; 
+        body {
+            font-family: Arial, sans-serif;
+            background:#f8f8f8;
+            margin:0;
+            padding:0;
         }
-        .header { 
-            position:sticky; top:0; background:white; padding:15px; 
-            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10; 
+        .header {
+            position:sticky; top:0; background:white; padding:15px;
+            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10;
         }
         .back { font-size:28px; cursor:pointer; color:#4CAF50; }
         .title { font-size:20px; font-weight:bold; flex:1; }
         .container { padding:20px; max-width:600px; margin:0 auto; }
         .form-group { margin-bottom:20px; }
         label { display:block; font-weight:600; margin-bottom:8px; color:#333; }
-        input, textarea { 
-            width:100%; padding:14px; border:1px solid #ddd; 
-            border-radius:10px; font-size:16px; box-sizing:border-box; 
+        input, textarea {
+            width:100%; padding:14px; border:1px solid #ddd;
+            border-radius:10px; font-size:16px; box-sizing:border-box;
         }
         input[readonly] { background:#f0f0f0; color:#555; }
         textarea { resize:vertical; min-height:100px; }
-        .items-section { 
-            background:white; padding:20px; border-radius:12px; 
-            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin:20px 0; 
+        .items-section {
+            background:white; padding:20px; border-radius:12px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin:20px 0;
         }
-        .item-row { 
-            display:flex; align-items:center; gap:16px; 
-            padding:12px 0; border-bottom:1px solid #eee; 
+        .item-row {
+            display:flex; align-items:center; gap:16px;
+            padding:12px 0; border-bottom:1px solid #eee;
         }
         .item-row:last-child { border-bottom:none; }
         .item-img { width:60px; height:60px; object-fit:cover; border-radius:8px; }
@@ -40,19 +40,19 @@
         .item-name { font-weight:600; font-size:16px; }
         .item-details { color:#666; font-size:14px; margin-top:4px; }
         .item-price { color:#4CAF50; font-weight:bold; font-size:16px; }
-        .summary { 
-            background:white; padding:20px; border-radius:12px; 
-            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin:20px 0; 
+        .summary {
+            background:white; padding:20px; border-radius:12px;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin:20px 0;
         }
-        .summary-row { 
-            display:flex; justify-content:space-between; font-size:16px; margin-bottom:12px; 
+        .summary-row {
+            display:flex; justify-content:space-between; font-size:16px; margin-bottom:12px;
         }
-        .grand-total { 
-            font-size:20px; font-weight:bold; color:#4CAF50; padding-top:12px; border-top:2px solid #eee; 
+        .grand-total {
+            font-size:20px; font-weight:bold; color:#4CAF50; padding-top:12px; border-top:2px solid #eee;
         }
-        .order-btn { 
-            width:100%; background:#4CAF50; color:white; border:none; 
-            padding:16px; font-size:18px; font-weight:bold; border-radius:12px; 
+        .order-btn {
+            width:100%; background:#4CAF50; color:white; border:none;
+            padding:16px; font-size:18px; font-weight:bold; border-radius:12px;
             cursor:pointer; box-shadow:0 4px 15px rgba(76,175,80,0.3); margin-top:20px;
         }
         .order-btn:hover { background:#43a047; }
@@ -71,7 +71,6 @@
         <div class="back" onclick="history.back()">←</div>
         <div class="title">Checkout</div>
     </div>
-
     <div class="container">
         <!-- Shown only if not logged in -->
         <div id="loginRequired" class="login-required">
@@ -79,18 +78,16 @@
             <p><a href="login.html">Login Now →</a></p>
         </div>
 
-        <!-- Main checkout form (hidden if not logged in) -->
+        <!-- Main checkout form -->
         <div id="checkoutForm" style="display:none;">
             <div class="form-group">
                 <label>Name</label>
                 <input type="text" id="name" readonly>
             </div>
-
             <div class="form-group">
                 <label>Phone Number</label>
                 <input type="tel" id="phone" readonly>
             </div>
-
             <div class="form-group">
                 <label>Delivery Address <span style="color:#e74c3c;">*</span></label>
                 <textarea id="address" placeholder="House no., street, landmark, city, pin code" required></textarea>
@@ -114,11 +111,9 @@
                     <span>Grand Total</span>
                     <span id="grandTotal">₹0</span>
                 </div>
-
                 <div class="min-note" id="minNote" style="display:none;">
                     Minimum order ₹300 required
                 </div>
-
                 <button class="order-btn" id="orderBtn" disabled>Order Now</button>
             </div>
         </div>
@@ -129,16 +124,14 @@
         let cart = JSON.parse(localStorage.getItem('cart') || '[]');
         const loggedUser = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
 
-        // === MANDATORY LOGIN CHECK ===
         if (!loggedUser) {
             document.getElementById('checkoutForm').style.display = 'none';
             document.getElementById('loginRequired').style.display = 'block';
         } else {
-            // User is logged in — show checkout
             document.getElementById('loginRequired').style.display = 'none';
             document.getElementById('checkoutForm').style.display = 'block';
 
-            // Pre-fill name and phone (read-only)
+            // Pre-fill readonly fields
             document.getElementById('name').value = loggedUser.name || '';
             document.getElementById('phone').value = loggedUser.phone || '';
 
@@ -147,7 +140,6 @@
 
         function renderItems() {
             const itemsList = document.getElementById('itemsList');
-
             if (cart.length === 0) {
                 itemsList.innerHTML = '<div style="text-align:center;padding:40px;color:#888;">Your cart is empty</div>';
                 document.querySelector('.summary').style.display = 'none';
@@ -190,6 +182,7 @@
             }
         }
 
+        // MAIN FIX: Send userId when placing order
         async function placeOrder() {
             const address = document.getElementById('address').value.trim();
             if (!address) {
@@ -203,9 +196,9 @@
                 return;
             }
 
-            // Format cart for backend
+            // Format cart for backend (same as before)
             const cartFormatted = {};
-            const shopName = localStorage.getItem('selectedCategory') || "ChatPoint";
+            const shopName = "ChatPoint";  // or get from localStorage if needed
             cartFormatted[shopName] = {};
             cart.forEach(item => {
                 cartFormatted[shopName][item.name] = {
@@ -219,7 +212,12 @@
                 phone: loggedUser.phone,
                 address1: address,
                 grandTotal: subtotal + Math.round(subtotal * 0.10),
-                cart: cartFormatted
+                cart: cartFormatted,
+
+                // CRITICAL: This links the order to the user for tracking
+                userId: loggedUser._id,
+                customer_name: loggedUser.name,
+                customer_phone: loggedUser.phone
             };
 
             try {
@@ -232,25 +230,20 @@
                 const result = await res.json();
 
                 if (result.success) {
-                    alert(`Order placed successfully!\nOrder ID: ${result.orderId}\nThank you for shopping with ChatPoint!`);
+                    alert(`Order placed successfully!\nOrder ID: ${result.orderId}\nThank you!`);
                     localStorage.removeItem('cart');
-                    window.location.href = 'index.html'; // or 'orders.html'
+                    cart = [];
+                    window.location.href = 'tracking.html';  // Go directly to tracking
                 } else {
-                    alert("Order failed: " + (result.message || "Please try again"));
+                    alert("Order failed: " + (result.message || "Try again"));
                 }
             } catch (err) {
                 console.error(err);
-                alert("Network error. Check your connection.");
+                alert("Network error. Please try again.");
             }
         }
 
-        // Attach order button
         document.getElementById('orderBtn').onclick = placeOrder;
-
-        // Initial load
-        window.onload = () => {
-            if (loggedUser) renderItems();
-        };
     </script>
 </body>
 </html>
