--- a/tracking.html
+++ b/tracking.html
@@ -6,90 +6,106 @@
     <title>My Orders & Tracking | ChatPoint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
-        :root {
-            --primary: #ff4500;
-            --success: #28a745;
-            --bg: #f8f9fa;
-            --text: #333;
+        body {
+            font-family: Arial, sans-serif;
+            background:#f8f8f8;
+            margin:0;
+            padding:0;
         }
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: system-ui, -apple-system, sans-serif; background: var(--bg); min-height: 100vh; }
-        .container { max-width: 500px; margin: 0 auto; padding: 1rem; }
-
         .header {
-            background: white; padding: 12px 16px; display: flex; align-items: center; justify-content: space-between;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 10;
+            position:sticky; top:0; background:white; padding:15px;
+            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10;
         }
-        .back-btn { font-size: 24px; cursor: pointer; color: var(--text); }
-        .title { font-size: 18px; font-weight: bold; }
+        .back { font-size:28px; cursor:pointer; color:#4CAF50; }
+        .title { font-size:20px; font-weight:bold; flex:1; }
+        .container { padding:20px; max-width:600px; margin:0 auto; }
 
         .order-card {
-            background: white; border-radius: 12px; margin: 16px 0; overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+            background:white; border-radius:12px; margin:16px 0; overflow:hidden;
+            box-shadow:0 4px 10px rgba(0,0,0,0.08);
         }
         .order-header {
-            padding: 16px; border-bottom: 1px solid #eee;
+            padding:16px; border-bottom:1px solid #eee;
+            display:flex; justify-content:space-between; align-items:center;
         }
-        .order-id { font-weight: bold; font-size: 1.1rem; }
-        .order-status { font-size: 0.9rem; margin-top: 4px; color: var(--primary); }
-        .status-delivered { color: var(--success); }
-        .status-cancelled { color: #dc3545; }
+        .order-id { font-weight:bold; font-size:1.1rem; }
+        .order-status { font-size:0.9rem; color:#4CAF50; }
+        .status-pending { color:#e67e22; }
+        .status-delivered { color:#27ae60; }
+        .status-cancelled { color:#c0392b; }
 
+        /* Items List */
+        .items-section {
+            padding:20px; background:#f9f9f9;
+        }
+        .item-row {
+            display:flex; align-items:center; gap:16px;
+            padding:12px 0; border-bottom:1px solid #eee;
+        }
+        .item-row:last-child { border-bottom:none; }
+        .item-img { width:60px; height:60px; object-fit:cover; border-radius:8px; }
+        .item-info { flex:1; }
+        .item-name { font-weight:600; font-size:16px; }
+        .item-details { color:#666; font-size:14px; margin-top:4px; }
+        .item-price { color:#4CAF50; font-weight:bold; font-size:16px; }
+
+        /* Tracking Section */
         .track-btn {
-            width: 100%; padding: 16px; font-size: 1.1rem; font-weight: bold;
-            border: none; cursor: pointer; background: var(--primary); color: white;
+            width:100%; background:#4CAF50; color:white; border:none;
+            padding:16px; font-size:18px; font-weight:bold; border-radius:0;
+            cursor:pointer;
         }
-        .track-btn:disabled { background: #ccc; cursor: not-allowed; }
+        .track-btn:disabled { background:#ccc; cursor:not-allowed; }
 
-        .tracking-section { display: none; padding: 20px; background: #f9f9f9; }
-        .tracking-section.active { display: block; }
+        .tracking-section { display:none; }
+        .tracking-section.active { display:block; }
 
         .map-container {
-            position: relative; height: 300px; background: #e0e0e0; overflow: hidden; border-radius: 8px;
+            position:relative; height:300px; background:#e0e0e0; overflow:hidden;
         }
-        .map-bg {
-            width: 100%; height: 100%; object-fit: cover; filter: brightness(0.9);
-        }
-        .path { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
-        .path-svg { width: 100%; height: 100%; }
-        .dotted-line { stroke: var(--primary); stroke-width: 4; fill: none; stroke-dasharray: 8,8; }
-        .pin { position: absolute; font-size: 32px; color: var(--primary); transform: translate(-50%, -100%); }
-        .store-pin { left: 15%; top: 70%; }
-        .customer-pin { left: 80%; top: 20%; }
+        .map-bg { width:100%; height:100%; object-fit:cover; filter:brightness(0.9); }
+        .path { position:absolute; top:0; left:0; width:100%; height:100%; pointer-events:none; }
+        .path-svg { width:100%; height:100%; }
+        .dotted-line { stroke:#ff4500; stroke-width:4; fill:none; stroke-dasharray:8,8; }
+        .pin { position:absolute; font-size:32px; color:#ff4500; transform:translate(-50%,-100%); }
+        .store-pin { left:15%; top:70%; }
+        .customer-pin { left:80%; top:20%; }
         .bike {
-            position: absolute; font-size: 28px; color: black;
-            transform: translate(-50%, -50%); transition: all 1s ease-in-out; z-index: 5;
+            position:absolute; font-size:28px; color:black;
+            transform:translate(-50%,-50%); transition:all 1s ease-in-out; z-index:5;
         }
 
-        .status-box { text-align: center; padding: 20px 0; }
-        .status-title { font-size: 18px; font-weight: bold; }
-        .eta { font-size: 16px; color: var(--primary); font-weight: bold; margin: 8px 0; }
+        .status-box { text-align:center; padding:20px; background:white; }
+        .status-title { font-size:18px; font-weight:bold; color:#333; }
+        .eta { font-size:16px; color:#ff4500; font-weight:bold; margin:10px 0; }
 
         .progress-steps {
-            display: flex; justify-content: space-between; padding: 0 20px 20px;
+            display:flex; justify-content:space-between; padding:20px;
         }
-        .step { text-align: center; flex: 1; }
+        .step { text-align:center; flex:1; }
         .step-circle {
-            width: 40px; height: 40px; border-radius: 50%; background: #ddd;
-            margin: 0 auto 8px; display: flex; align-items: center; justify-content: center;
-            color: white; font-weight: bold;
+            width:40px; height:40px; border-radius:50%; background:#ddd;
+            margin:0 auto 8px; display:flex; align-items:center; justify-content:center;
+            color:white; font-weight:bold;
         }
-        .step.active .step-circle { background: var(--primary); }
-        .step-label { font-size: 12px; color: #666; }
-        .step.active .step-label { color: var(--primary); font-weight: bold; }
+        .step.active .step-circle { background:#ff4500; }
+        .step-label { font-size:12px; color:#666; }
+        .step.active .step-label { color:#ff4500; font-weight:bold; }
 
-        .no-login, .no-orders { text-align: center; padding: 60px 20px; color: #666; font-size: 1.1rem; }
-        .loader { text-align: center; padding: 40px; }
+        .no-login, .no-orders {
+            text-align:center; padding:80px 20px; color:#e74c3c; font-size:18px;
+        }
+        .no-login a, .no-orders a { color:#4CAF50; font-weight:bold; text-decoration:none; }
+        .loader { text-align:center; padding:60px; color:#888; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="back-btn" onclick="history.back()">←</div>
-            <div class="title">My Orders & Tracking</div>
-            <div></div>
-        </div>
+    <div class="header">
+        <div class="back" onclick="history.back()">←</div>
+        <div class="title">My Orders & Tracking</div>
+    </div>
 
+    <div class="container">
         <div id="loading" class="loader">
             <i class="fas fa-spinner fa-spin fa-3x"></i>
             <p>Loading your orders...</p>
@@ -97,12 +113,12 @@
 
         <div id="noLogin" class="no-login" style="display:none;">
             <p>You need to login to view your orders</p>
-            <p><a href="login.html" style="color:#4CAF50;font-weight:bold;">Login Now →</a></p>
+            <p><a href="login.html">Login Now →</a></p>
         </div>
 
         <div id="noOrders" class="no-orders" style="display:none;">
             <p>No orders found</p>
-            <p>Place your first order to track it here!</p>
+            <p><a href="index.html">Start Shopping →</a></p>
         </div>
 
         <div id="ordersList"></div>
@@ -116,7 +132,7 @@
             document.getElementById('noLogin').style.display = 'block';
         } else {
             fetchUserOrders();
-            setInterval(fetchUserOrders, 10000); // Refresh every 10 seconds
+            setInterval(fetchUserOrders, 10000);
         }
 
         async function fetchUserOrders() {
@@ -133,7 +149,7 @@
                     document.getElementById('noOrders').style.display = 'block';
                 }
             } catch (err) {
-                console.error("Fetch error:", err);
+                console.error(err);
                 document.getElementById('loading').innerHTML = '<p>Error loading orders. Retrying...</p>';
             }
         }
@@ -147,11 +163,11 @@
                 const isTrackable = order.status === 'confirmed' || order.status === 'delivered';
 
                 const positions = [
-                    { left: '15%', top: '70%' },  // at store
+                    { left: '15%', top: '70%' },
                     { left: '35%', top: '55%' },
                     { left: '55%', top: '45%' },
                     { left: '70%', top: '30%' },
-                    { left: '80%', top: '20%' }   // at customer
+                    { left: '80%', top: '20%' }
                 ];
                 const pos = positions[Math.min(progress, 4)];
 
@@ -160,17 +176,29 @@
                     "Picked up from store",
                     "On the way",
                     "Almost there!",
-                    "Delivered! Enjoy your items 🥳"
+                    "Delivered! Enjoy 🥳"
                 ];
                 const etas = ["~30 min", "~25 min", "~15 min", "~5 min", "Delivered"];
 
                 let bikeIcon = '<i class="fas fa-motorcycle"></i>';
-                if (progress === 4) bikeIcon = '<i class="fas fa-check-circle" style="font-size:36px;color:#28a745;"></i>';
+                if (progress === 4) bikeIcon = '<i class="fas fa-check-circle" style="font-size:36px;color:#27ae60;"></i>';
 
-                let statusClass = '';
+                let statusClass = `status-${order.status}`;
                 let statusText = order.status.charAt(0).toUpperCase() + order.status.slice(1);
-                if (order.status === 'delivered') statusClass = 'status-delivered';
-                if (order.status === 'cancelled') statusClass = 'status-cancelled';
+
+                // Build items list
+                let itemsHtml = '';
+                if (order.items && order.items.length > 0) {
+                    itemsHtml = order.items.map(item => `
+                        <div class="item-row">
+                            <div class="item-info">
+                                <div class="item-name">${item.name}</div>
+                                <div class="item-details">Quantity: ${item.quantity}</div>
+                            </div>
+                            <div class="item-price">₹${item.price * item.quantity}</div>
+                        </div>
+                    `).join('');
+                }
 
                 return `
                   <div class="order-card">
@@ -179,12 +207,20 @@
                       <div class="order-status ${statusClass}">${statusText}</div>
                     </div>
 
+                    <!-- Items List -->
+                    <div class="items-section">
+                        <h3 style="margin:0 0 16px 0; color:#333;">Your Items</h3>
+                        ${itemsHtml || '<div style="text-align:center;color:#888;padding:20px;">No items found</div>'}
+                    </div>
+
+                    <!-- Pending Message -->
                     ${order.status === 'pending' ? `
-                      <div style="padding:20px; text-align:center; color:#666; font-size:16px;">
+                      <div style="padding:20px; text-align:center; background:#fff9e6; color:#e67e22; font-size:16px;">
                         ⏳ Waiting for shop confirmation
                       </div>
                     ` : ''}
 
+                    <!-- Tracking for Confirmed/Delivered -->
                     ${isTrackable ? `
                       <button class="track-btn" onclick="toggleTracking(this)">Track Order</button>
 
