--- a/gitems.html
+++ b/gitems.html
@@ -3,43 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grocery Items</title>
+    <title>Grocery Items — ChatPoint</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background:#f8f8f8; 
-            margin:0; 
-            padding:0; 
-            padding-bottom: 90px; /* Space for cart bar */
+        :root {
+            --primary: #2563eb; /* Modern professional blue */
+            --primary-dark: #1d4ed8;
+            --success: #10b981;
+            --danger: #ef4444;
+            --bg: #f8fafc;
+            --card-bg: #ffffff;
+            --text: #1e293b;
+            --text-light: #64748b;
+            --border: #e2e8f0;
+            --shadow-sm: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            --shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+            --radius: 14px;
         }
-        .header { 
-            position:sticky; top:0; background:white; padding:15px; 
-            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10; 
+
+        body {
+            font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
+            background: var(--bg);
+            margin: 0;
+            padding: 0;
+            padding-bottom: 100px; /* Space for bottom cart bar */
+            color: var(--text);
         }
-        .back { font-size:28px; cursor:pointer; color:#4CAF50; }
-        .title { font-size:20px; font-weight:bold; flex:1; }
-        .cart-icon { font-size:24px; position:relative; cursor:pointer; }
-        .cart-count { 
-            position:absolute; top:-8px; right:-8px; background:#ff4444; color:white; 
-            font-size:12px; width:20px; height:20px; border-radius:50%; 
-            display:flex; align-items:center; justify-content:center; 
+
+        .header {
+            position: sticky;
+            top: 0;
+            background: var(--card-bg);
+            padding: 16px 20px;
+            box-shadow: var(--shadow-sm);
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            z-index: 20;
         }
-        .grid { 
-            display:grid; grid-template-columns:repeat(2,1fr); gap:15px; 
-            padding:20px; 
+
+        .back {
+            font-size: 32px;
+            cursor: pointer;
+            color: var(--primary);
+            font-weight: 300;
         }
-        .item { 
-            background:white; border-radius:12px; overflow:hidden; 
-            box-shadow:0 4px 10px rgba(0,0,0,0.1); position:relative; 
+
+        .title {
+            font-size: 22px;
+            font-weight: 600;
+            flex: 1;
         }
-        .item img { width:100%; height:140px; object-fit:cover; }
-        .info { padding:12px; }
-        .name { font-size:14px; font-weight:600; margin-bottom:5px; }
-        .price { font-size:16px; color:#4CAF50; font-weight:bold; }
-        .add-btn { 
-            position:absolute; bottom:8px; right:8px; background:#4CAF50; color:white; 
-            border:none; width:40px; height:40px; border-radius:50%; font-size:20px; 
-            cursor:pointer; box-shadow:0 4px 10px rgba(76,175,80,0.3); 
+
+        .cart-icon {
+            font-size: 28px;
+            position: relative;
+            cursor: pointer;
+            padding: 8px;
+        }
+
+        .cart-count {
+            position: absolute;
+            top: -4px;
+            right: -4px;
+            background: var(--danger);
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            min-width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            padding: 24px 16px;
+        }
+
+        .item {
+            background: var(--card-bg);
+            border-radius: var(--radius);
+            overflow: hidden;
+            box-shadow: var(--shadow-sm);
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .item:hover {
+            transform: translateY(-6px);
+            box-shadow: var(--shadow);
+        }
+
+        .item img {
+            width: 100%;
+            height: 160px;
+            object-fit: cover;
+            background: #f1f5f9;
+        }
+
+        .info {
+            padding: 16px;
+        }
+
+        .name {
+            font-size: 15px;
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: var(--text);
+            line-height: 1.4;
+        }
+
+        .price {
+            font-size: 18px;
+            font-weight: bold;
+            color: var(--primary);
+        }
+
+        .add-btn {
+            position: absolute;
+            bottom: 12px;
+            right: 12px;
+            background: var(--primary);
+            color: white;
+            border: none;
+            width: 48px;
+            height: 48px;
+            border-radius: 50%;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 6px 16px rgba(37, 99, 235, 0.3);
+            transition: all 0.2s;
+        }
+
+        .add-btn:hover {
+            background: var(--primary-dark);
+            transform: scale(1.1);
+        }
+
+        .add-btn:active {
+            transform: scale(0.95);
         }
 
         /* Bottom Cart Bar */
@@ -48,61 +155,107 @@
             bottom: 0;
             left: 0;
             right: 0;
-            background: white;
-            padding: 14px 20px;
-            box-shadow: 0 -4px 15px rgba(0,0,0,0.12);
+            background: var(--card-bg);
+            padding: 16px 20px;
+            box-shadow: 0 -8px 20px rgba(0, 0, 0, 0.12);
             display: flex;
             align-items: center;
             justify-content: space-between;
-            border-top: 1px solid #eee;
+            border-top: 1px solid var(--border);
             transform: translateY(100%);
-            transition: transform 0.35s ease;
+            transition: transform 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
             z-index: 100;
         }
+
         .bottom-cart-bar.visible {
             transform: translateY(0);
         }
+
         .cart-summary {
             display: flex;
             align-items: center;
-            gap: 12px;
-        }
-        .cart-items-text {
-            font-weight: bold;
-            color: #333;
-        }
-        .cart-total-price {
-            font-size: 18px;
-            font-weight: bold;
-            color: #4CAF50;
-        }
-        .view-cart-btn {
-            background: #4CAF50;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 30px;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            box-shadow: 0 4px 10px rgba(76,175,80,0.3);
-        }
-        .view-cart-btn:hover {
-            background: #43a047;
+            gap: 14px;
         }
 
-        /* Login Required Message */
+        .cart-items-text {
+            font-weight: 600;
+            font-size: 17px;
+            color: var(--text);
+        }
+
+        .cart-total-price {
+            font-size: 20px;
+            font-weight: bold;
+            color: var(--primary);
+        }
+
+        .view-cart-btn {
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 14px 28px;
+            border-radius: 30px;
+            font-size: 17px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 6px 16px rgba(37, 99, 235, 0.3);
+            transition: all 0.3s;
+        }
+
+        .view-cart-btn:hover {
+            background: var(--primary-dark);
+            transform: translateY(-2px);
+        }
+
+        .view-cart-btn:active {
+            transform: translateY(0);
+        }
+
+        /* Login Required */
         .login-required {
             text-align: center;
-            padding: 80px 20px;
-            color: #e74c3c;
+            padding: 100px 24px;
+            color: var(--text-light);
+            font-size: 19px;
+        }
+
+        .login-required a {
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 20px;
+        }
+
+        .login-required a:hover {
+            text-decoration: underline;
+        }
+
+        /* Loading / Error State */
+        .loading-state {
+            grid-column: 1 / -1;
+            text-align: center;
+            padding: 60px 20px;
+            color: var(--text-light);
             font-size: 18px;
         }
-        .login-required a {
-            color: #4CAF50;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 20px;
+
+        /* Responsive Adjustments */
+        @media (min-width: 480px) {
+            .grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        @media (min-width: 768px) {
+            .grid {
+                grid-template-columns: repeat(4, 1fr);
+                padding: 32px;
+                gap: 24px;
+            }
+            .container {
+                max-width: 1200px;
+                margin: 0 auto;
+            }
         }
     </style>
 </head>
@@ -115,9 +268,11 @@
         </div>
     </div>
 
-    <!-- Main Content - Hidden if not logged in -->
+    <!-- Main Content -->
     <div id="mainContent">
-        <div class="grid" id="itemsGrid"></div>
+        <div class="grid" id="itemsGrid">
+            <!-- Items loaded here -->
+        </div>
 
         <!-- Bottom Cart Bar -->
         <div class="bottom-cart-bar" id="bottomCartBar">
@@ -129,7 +284,7 @@
         </div>
     </div>
 
-    <!-- Shown only if not logged in -->
+    <!-- Login Required Message -->
     <div id="loginRequired" class="login-required" style="display:none;">
         <p>You need to login to browse items and shop</p>
         <p><a href="login.html">Login Now →</a></p>
@@ -139,12 +294,11 @@
         let cart = JSON.parse(localStorage.getItem('cart') || '[]');
         const loggedUser = JSON.parse(localStorage.getItem('chatpoint_user') || 'null');
 
-        // === MANDATORY LOGIN CHECK ===
+        // Login Check
         if (!loggedUser) {
             document.getElementById('mainContent').style.display = 'none';
             document.getElementById('loginRequired').style.display = 'block';
         } else {
-            // User is logged in — load items
             loadItems();
             updateCartDisplay();
         }
@@ -153,16 +307,23 @@
             const category = localStorage.getItem('selectedCategory') || 'Fruits & Vegetables';
             document.getElementById('categoryName').textContent = category;
 
+            const grid = document.getElementById('itemsGrid');
+            grid.innerHTML = '<div class="loading-state">Loading items...</div>';
+
             try {
                 const res = await fetch(`/api/items/${encodeURIComponent(category)}`);
                 const data = await res.json();
                 const items = data.success ? data.items : [];
 
-                const grid = document.getElementById('itemsGrid');
+                if (items.length === 0) {
+                    grid.innerHTML = '<div class="loading-state">No items available in this category yet</div>';
+                    return;
+                }
+
                 grid.innerHTML = items.map(item => `
                     <div class="item">
                         <img src="${item.imageUrl}" alt="${item.name}" loading="lazy"
-                             onerror="this.src='https://via.placeholder.com/300x140?text=No+Image'">
+                             onerror="this.src='https://via.placeholder.com/300x160?text=No+Image'">
                         <div class="info">
                             <div class="name">${item.name}</div>
                             <div class="price">₹${item.price}</div>
@@ -173,7 +334,8 @@
 
                 updateCartDisplay();
             } catch (err) {
-                document.getElementById('itemsGrid').innerHTML = "<div style='grid-column:1/-1;text-align:center;padding:40px;color:#999;'>Error loading items</div>";
+                console.error(err);
+                grid.innerHTML = '<div class="loading-state">Error loading items. Please try again.</div>';
             }
         }
 
@@ -186,28 +348,32 @@
             }
             localStorage.setItem('cart', JSON.stringify(cart));
             updateCartDisplay();
+
+            // Optional: subtle feedback
+            const btn = event.target;
+            btn.textContent = '✓';
+            setTimeout(() => { btn.textContent = '+'; }, 800);
         }
 
         function updateCartDisplay() {
             const totalItems = cart.reduce((sum, item) => sum + item.qty, 0);
             const totalPrice = cart.reduce((sum, item) => sum + (item.price * item.qty), 0);
 
-            // Update header cart count
+            // Header cart badge
             document.getElementById('cartCount').textContent = totalItems || 0;
 
-            // Update bottom cart bar
+            // Bottom bar
             const cartBar = document.getElementById('bottomCartBar');
             if (totalItems > 0) {
                 cartBar.classList.add('visible');
                 document.getElementById('cartItemsText').textContent =
-                    totalItems === 1 ? "1 Item" : `${totalItems} Items`;
+                    totalItems === 1 ? '1 Item' : `${totalItems} Items`;
                 document.getElementById('cartTotalPrice').textContent = `₹${totalPrice}`;
             } else {
                 cartBar.classList.remove('visible');
             }
         }
 
-        // Safe navigation to cart — checks login first
         function checkLoginAndGoToCart() {
             if (!loggedUser) {
                 window.location.href = 'login.html';
